# mymy

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  docker-compose.firecracker.yml  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
api/migrations/: 001_init.sql  002_seed_defaults.sql  003_projects.sql  004_chat.sql  005_chat_nullable_project.sql  006_calendar.sql  007_notes.sql  008_tasks.sql  009_transactions.sql  010_audit_logs.sql  011_version_history.sql  012_omnisearch_fts.sql  013_goals.sql  014_knowledge_base.sql  015_task_statuses.sql  016_auth_sessions.sql  017_auth_pin_failures.sql  018_refactoring_query_indexes.sql  019_knowledge_project_id.sql  020_knowledge_fix_article_parents.sql  021_llm_providers.sql  022_chat_native_agent_messages.sql  023_cron_results.sql  024_agent_credentials.sql  025_extensions.sql  026_extension_settings_encryption.sql  027_audit_security_actions.sql  028_moa_presets.sql  029_native_agents.sql  030_remove_default_chat_agent.sql  031_delete_legacy_default_chat_sessions.sql  032_drive_sandbox_runtime.sql  033_drive_trash_entries.sql  034_chat_prompt_snapshots.sql  035_investments_process_metrics.sql  036_agent_tool_permissions.sql  037_remove_legacy_external_agent_schema.sql  038_agent_file_observations.sql  039_quarantined_cron_jobs.sql  040_agent_run_foundation.sql  (+46 more)
api/src/: config.rs  error.rs  main.rs  release_certification.rs  release_scope.rs  sandbox_runner_main.rs  state.rs
api/src/agent/: clarify.rs  context.rs  crypto.rs  execution.rs  loop_engine.rs  memory.rs  mod.rs  prompt.rs  runtime.rs  scheduler.rs  skills.rs
api/src/handlers/: agent_ops.rs  agent_prompts.rs  agent_runs.rs  agent_systems.rs  agents.rs  audit.rs  auth.rs  calendar.rs  chat.rs  cron.rs  decisions.rs  document_editor.rs  drive.rs  editor_settings.rs  extensions.rs  goals.rs  investments.rs  journey.rs  knowledge.rs  llm_providers.rs  mcp.rs  media.rs  moa.rs  mod.rs  notes.rs  previews.rs  proactive.rs  projects.rs  release_harness.rs  runtime_memory.rs  sandbox.rs  search.rs  settings.rs  skills.rs  task_statuses.rs  tasks.rs  transactions.rs  versions.rs  web_viewer.rs
api/src/middleware/: mod.rs
api/src/models/: agent.rs  agent_ops.rs  agent_run.rs  agent_system.rs  artifact.rs  audit.rs  auth.rs  calendar.rs  chat.rs  content_security.rs  decision.rs  document_editor.rs  drive.rs  editor_settings.rs  goal.rs  investment.rs  knowledge.rs  llm_provider.rs  moa.rs  mod.rs  note.rs  preview.rs  proactive.rs  project.rs  runtime_memory.rs  sandbox.rs  scope.rs  search.rs  settings.rs  task.rs  task_status.rs  transaction.rs  version.rs  work_graph.rs
api/src/sandbox_runner/: config_env.rs  error.rs  firecracker.rs  firecracker_runtime.rs  host.rs  logs.rs  metrics.rs  mod.rs  path_policy.rs  proxy.rs  state.rs  types.rs
api/src/services/: agent_llm.rs  agent_ops.rs  agent_permissions.rs  agent_prompts.rs  agent_runs.rs  agent_systems.rs  agents.rs  artifacts.rs  audit.rs  audit_logs.rs  auth.rs  calendar.rs  chat.rs  content_quarantine.rs  content_safety.rs  cron.rs  currency.rs  decisions.rs  document_conversion.rs  document_editor.rs  document_malware.rs  document_revisions.rs  drive.rs  drive_sync.rs  editor_settings.rs  extensions.rs  file_mutations.rs  file_observations.rs  (+31 more)
(+1064 files in other folders)
