[package]
name = "mymy-api"
version = "0.1.0"
edition = "2021"
description = "mymy backend API — Rust (axum)"

[[bin]]
name = "mymy-api"
path = "src/main.rs"

[[bin]]
name = "mymy-sandbox-runner"
path = "src/sandbox_runner_main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
encoding_rs = "0.8"

# Auth
argon2 = "0.5"

# Async utilities (agent runtime)
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"

# Crypto (API key encryption at rest)
aes-gcm = "0.10"
hkdf = "0.12"

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iso_currency = "0.5.3"
regex = "1"
dotenvy = "0.15"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
percent-encoding = "2"
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

# HTTP client for LLM providers, Drive sync, and runtime integrations.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Object storage sync
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
